--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
-name = "ctsr"
-version = "0.1.0"
-edition = "2021"
+name = 'ctsr'
+version = '0.1.0'
+edition = '2021'
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = '4.4.8', features = ['derive'] }
+regex = '1.10.2'
+tokio = { version = "1.34.0", features = ["full"] }
